--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: warthurton.com
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A tiny simple blog with posts about SQL Server, Business Intelligence, Games, Backpacking, and all the other tings that interest me.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://warthurton.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: warthurton
