--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: warthurton.com
-email: your-email@example.com
+# email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A tiny simple blog with posts about SQL Server, Business Intelligence, Games, Backpacking, 
-  and all the other things that interest me.
+  and all the other things that interest me. <a rel="me" href="https://hachyderm.io/@warthurton">Mastodon</a>
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://warthurton.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: warthurton
