--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: warthurton.com
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A tiny simple blog with posts about SQL Server, Business Intelligence, Games, Backpacking, 
-  and all the other things that interest me. <a rel="me" href="https://hachyderm.io/@warthurton">Mastodon</a>
+  and all the other things that interest me.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://warthurton.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: warthurton
